--- a/docker-compose/mysql5.7/mysql/conf/my.cnf
+++ b/docker-compose/mysql5.7/mysql/conf/my.cnf
@@ -4,6 +4,7 @@ socket = /var/run/mysqld/mysqld.sock
 [mysqld]
 user = mysql
 port = 3306
+bind-address = ::
 server_id = 100
 datadir = /var/lib/mysql  # data_path
 socket = /var/run/mysqld/mysqld.sock
