--- a/dockerfile/jenkins_agent/jenkins-xone-java-cust/docker-compose.yml
+++ b/dockerfile/jenkins_agent/jenkins-xone-java-cust/docker-compose.yml
@@ -1,19 +1,17 @@
 version: "3"
 services:
-  agent-xone:
-    image: xiangys0134/agent:xone-v1.0.16
-    container_name: agent-xone
+  xone-dev-rpm:
+    image: xiangys0134/xc_devtool_xone:xone-java-dev-rpm-v0.1
+    container_name: xone-dev-rpm
     restart: always
     privileged: true
-    volumes:
-      - ./jenkins_data/build:/data/jenkins/build
-      - ./jenkins_data/rpmbuild/BUILD:/data/jenkins/rpmbuild/BUILD
-      - ./jenkins_data/rpmbuild/SOURCES:/data/jenkins/rpmbuild/SOURCES
-      - ./jenkins_data/rpmbuild/RPMS:/data/jenkins/rpmbuild/RPMS
-      - ./jenkins_data/rpmbuild/BUILDROOT:/data/jenkins/rpmbuild/BUILDROOT
-      - ./jenkins_data:/data/jenkins
+    entrypoint: ["/bin/sh","/usr/local/bin/jenkins.sh"]
     environment:
-      - JENKINS_USER=jenkins
-      - JENKINS_URL=http://192.168.10.83:8080/computer/xone/slave-agent.jnlp
-      - JENKINS_SECRET=d9f86f2a2c270f3e15b4469212bd57d3c34e1dfa5468834d81f4edccbe1cec27
-      - JENKINS_AGENT_WORKDIR=/data/jenkins
+      - JENKINS_URL=http://jenkins:8080/computer/xone-dev-rpm/slave-agent.jnlp
+      - JENKINS_SECRET=27a798cb84369b00c24b81138aaca4404b384b4a7ae7d1a295a1d540d104d1e3
+      - JENKINS_AGENT_WORKDIR=/data/jenkins_home
+      - JENKINS_USER=root
+    networks:
+      - xunce
+networks:
+  xunce:
