--- a/dockerfile/jdk-base/1.8.x/Dockerfile_java_deploy
+++ b/dockerfile/jdk-base/1.8.x/Dockerfile_java_deploy
@@ -1,4 +1,4 @@
-FROM centos:centos7.5.1804
+FROM centos:centos7.6.1810
 LABEL maintainer="<yousong.xiang@xuncetech.com>" \
       name="vone-deploy" \
       author="yousong.xiang" \
@@ -7,21 +7,18 @@ LABEL maintainer="<yousong.xiang@xuncetech.com>" \
       desc="vone java depoy" \
       build-date="2020.10.16"
 
-#COPY xone-dev-source/java/RPM /tmp/RPM
+ENV LANG=zh_CN.UTF-8 \
+    LANGUAGE=zh_CN.UTF-8 \
+    TIME_ZONE=Asia/Shanghai \
+    JAVA_HOME=/usr/lib/jvm/java-1.8.0
 
 #安装jdk java-1.8.0-openjdk java-1.8.0-openjdk-devel
-RUN set -ex; \
+RUN localedef -v -c -i en_US -f UTF-8 zh_CN.UTF-8 >/dev/null 2>&1; \
+    set -ex; \
     \
+    grep -q 'zh_CN.utf8' /etc/locale.conf || sed -i -E 's/^LANG=.*/LANG="zh_CN.UTF-8"/' /etc/locale.conf; \
     ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime; \
-    #cd /tmp/RPM; \
-    #tar -zxf jdk.tar.gz; \
-    #yum localinstall -y *rpm; \
     yum install -y java-1.8.0-openjdk java-1.8.0-openjdk-devel net-tools; \
-    #获取jdk版本目录
-    jdk_version=`ls /usr/lib/jvm |grep "java-1.8.0-openjdk.*x86_64"|head -1`; \
-    echo "export JAVA_HOME=/usr/lib/jvm/${jdk_version}" >>/root/.bashrc; \
-    source /root/.bashrc; \
-    #rm -rf /tmp/RPM; \
     yum clean all
 
 USER root
